# aws-academy-grades-exporter-hs

./: .gitignore  CHANGELOG.md  LICENSE  README.md  aws-academy-grade-exporter.cabal  docker-compose.yml
db/: schema.sql
src/: Exporter.hs  Main.hs  Options.hs  Pg.hs  Row.hs  Types.hs
src/Exporter/: Postgres.hs  Stdout.hs
