cabal-version:   3.0
name:            aws-academy-grade-exporter
version:         0.1.0.0
synopsis:        Export grades from AWS Academy to different formats
description:
  A CLI tool for exporting grades from AWS Academy courses to various formats and sinks.

homepage:        https://github.com/aloussase/aws-academy-grade-exporter-hs
license:         MIT
license-file:    LICENSE
author:          Alexander Goussas
maintainer:      goussasalexander@gmail.com

-- copyright:
category:        Text
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

source-repository head
  type:     git
  location:
    https://github.com/disel-espol/aws-academy-grades-exporter-hs

common warnings
  ghc-options: -Wall

executable aws-academy-grade-exporter
  import:             warnings
  main-is:            Main.hs
  other-modules:
    Exporter
    Options
    Pg
    Row

  -- other-extensions:
  build-depends:
    , aeson                 >=2.2.3     && <2.3
    , base                  ^>=4.17.2.1
    , bytestring            >=0.11.5    && <0.12
    , cassava               >=0.5.3     && <0.6
    , optparse-applicative  >=0.18.1    && <0.19
    , postgresql-simple     >=0.7.0     && <0.8
    , req                   >=3.13.4    && <3.14
    , text                  >=2.0.2     && <2.1
    , vector                >=0.13.2    && <0.14

  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions:
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    OverloadedStrings
